--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -79,7 +79,7 @@ swift-rs = { git = "https://github.com/Brendonovich/swift-rs.git", branch = "aut
 #rusty_ffmpeg = { git = "https://github.com/harana-oss/rusty_ffmpeg.git" }
 
 [patch.crates-io]
-openssl-sys = "0.9.99"
+openssl-sys = { version = "0.9.99" }
 
 [profile.release]
 codegen-units = 1
