--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -76,7 +76,7 @@ screencapturekit-sys = { git = "https://github.com/harana-oss/screencapturekit-r
 swift-rs = { git = "https://github.com/Brendonovich/swift-rs.git", branch = "autorelease" }
 
 [patch.crates-io]
-openssl-sys = "=0.9.99"
+openssl-sys = { git = "https://github.com/sfackler/rust-openssl.git", tag = "openssl-sys-v0.9.99" }
 #rusty_ffmpeg = { git = "https://github.com/harana-oss/rusty_ffmpeg.git" }
 
 [profile.release]
