--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,7 +31,7 @@ harana_thumbnailer_core = { package = "thumbnailer_core", path = "../../search-e
 anyhow = "1.0.75"
 auto-launch = "0.5"
 color-eyre = "0.6.2"
-config = "0.13"
+config = "0.14"
 ctrlc = "3"
 dark-light = "1"
 fork = "0.1"
@@ -42,7 +42,6 @@ open = "5"
 plist = "1"
 raw-window-handle = "0.6"
 rgb = "0.8"
-screenshots = "0.8"
 sentry-tauri = "0.2"
 serde = "1.0.193"
 signal-hook = "0.3"
@@ -57,11 +56,12 @@ tracing-appender = "0.2"
 tracing-subscriber = "0.3.18"
 tokio = { version = "1", features = [] }
 tokio-cron-scheduler = "0.10"
-window-vibrancy = "0.4"
-zune-image = "0.4"
+window-vibrancy = "0.5"
+screenshots = "0.8"
+xcap = "0.0.4"
 
 [target.'cfg(target_os = "linux")'.dependencies]
-zbus = "3.15.0"
+zbus = "4.1.2"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 core-graphics = {version = "0.23.1" }
