--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,14 +36,16 @@ config = "0.14"
 ctrlc = "3"
 dark-light = "1"
 fork = "0.1"
+keyring = "2"
 log-panics = { version = "2", features = ["with-backtrace"] }
 mid = "1"
 mouce = "0.2.44"
 open = "5"
 plist = "1"
+rand = "0.8"
 raw-window-handle = "0.6"
 rgb = "0.8"
-sentry-tauri = "0.2"
+sentry-tauri = "0.3"
 serde = "1.0.197"
 signal-hook = "0.3"
 stackblur-iter = { git = "https://github.com/harana-oss/stackblur-iter.git" }
