--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "prismjs": "1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-gtm-module": "2.0.11",
     "react-helmet": "6.1.0",
     "react-ipynb-renderer": "2.1.2",
     "react-json-lens": "1.0.1",
@@ -77,7 +78,10 @@
     "@types/howler": "2.2.11",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
+    "@types/react-gtm-module": "2.0.3",
     "@types/react-helmet": "6.1.11",
+    "@types/react-router": "5.1.20",
+    "@types/react-router-dom": "5.3.3",
     "@vitejs/plugin-react": "4.2.1",
     "autoprefixer": "10.4.16",
     "postcss": "8.4.33",
